2002-12-20  Andras Varga

	* added tooltips to graphical inspectors. I.e. if you position the 
	mouse over a module icon, its name, type and id will appear in a 
	tooltip.

2002-12-07  Andras Varga

	* File|New network and File|New run dialogs now correctly offer choices
	of all available networks and all available run numbers

	* tkcmd.cc and other files: most direct assignments to interp->result 
	changed to Tcl_SetResult(); the ones left are tagged with FIXME comments

2002-12-06  Andras Varga

	* main.tcl: added tooltips for gauges on toolbar

2002-11-24 Andras Varga

	* modinsp.tcl: with "ring" layout, changed order of modules
	from clockwise to the more natural counter-clockwise

	* bugfix: cHead could not be inspected

2002-11-12 Andras Varga

	* ported to Tk8.4 (several 'char *' to 'const char *' changes)

	* renamed several internal methods in tklib.cc for clarity

2002-11-03  Andras Varga

	* tkapp.cc: clear main window when simulation is restarted

2002-10-27  Andras Varga

	* inspect.cc, tkapp.cc,..: inspectorfactory registration moved here 
	from sim/

	* reorganized source files (split large .cc and .h files)

	* reorganized the way inspectors are found and created

2002-10-26  Andras Varga

	* outvector inspectors: added basic labeling to axes

	* implemented that inspector windows are restored if you restart
	the simulation, and even if you quit/restart Tkenv. List of open
	inspectors is saved in ./tkenvrc which is automatically loaded
	on startup and written on exit. 
	
	In .tkenvrc, inspectors are identified by object name (obj->fullPath()) 
	and class name (obj->className()), so make sure to use locally unique
	names for variables you want to inspect.

	Inspector windows usually cannot be opened immediately when .tkenvrc 
	is loaded (the corresponding objects don't exist yet), so Tkenv keeps 
	a "pending inspectors list" for the inspectors to be opened.
	At each display update, Tkenv tries to find the corresponding objects 