@@ -116,22 +116,13 @@ set icons(network) [image create photo -data {
 }]
 
 set icons(find) [image create photo -data {
-    R0lGODlhFAATAPcAAAAAAAAAhAAA/wCEAACEhAD//yEAISEhIUIAAEIAQkIhQkJCQlpaWmMA
-    Y2MhIWMhY2NjY3t7e4QAAIQAhIQIAIQQAISEAISEhIwQAIwQCIwYCIwhCJQhCJQpCJQpEJQx
-    EJQ5EJw5EJxCEJxCGJxKGJxaWpycnKVKGKVSGKVaGKVaIaVjIa1jIa1rIa1rKa1zKbVzKbV7
-    KbWEKbWEMbWMMb17e72MMb2UMb2cMb2cvb29vcacOcalQsbGxt693t7e3ufere/v7/fv1v8A
-    ////AP//////////////////////////////////////////////////////////////////
-    ////////////////////////////////////////////////////////////////////////
-    ////////////////////////////////////////////////////////////////////////
-    ////////////////////////////////////////////////////////////////////////
-    ////////////////////////////////////////////////////////////////////////
-    ////////////////////////////////////////////////////////////////////////
-    ////////////////////////////////////////////////////////////////////////
-    ////////////////////////////////////////////////////////////////////////
-    ////////////////////////////////////////////////////////////////////////
-    ////////////////////////////////////////////////////////////////////////
-    /////////////////////////////////ywAAAAAFAATAAAIXwCBCBxIsKBBggASAjh4MCHC
-    hQwFArhQpOLACxAZAqhYoADCiAuLeDSYsWDIkSY1RgRS8iPIlyRbmrwwU6bJjBMD6FwpUWEA
-    IDp/8iT4M+hQokB3HhVYVOjSpE+jLg0IADs=
+    R0lGODlhFAATALMAAAAAAAAAhAD//4SEhOferf//////////////////////////////////
+    /////////ywAAAAAFAATAAAEQpDISaulIIN7M96cBAxFOQ0gB5SCgIVb4VppFc+2GhL1C/+0
+    nm0wFNpSo4ByJ9IECMonk/KMTqnQ5VVSlW6z3/A2AgA7
 }]
 
+set icons(config) [image create photo -data {
+    R0lGODlhFAATALMAAAAAAMbGxkZJuQAAwACA/8PDw25ubp6enkAAAIAAAP//////////////
+    /////////yH5BAEAAAEALAAAAAAUABMAAARCMMhJq704a2y6/59lCGRpkoZ4rkJaGUUsz7FL
+    wQWg6zFvTzga7SfB7QA9n0goJAaMx2PBGWTWRKBsZ8Pter/gcCUCADs=
+}]
