@@ -92,10 +92,9 @@ void TModuleWindow::update()
 
    setInspectButton(".toolbar.parent", mod->parentModule(),INSP_DEFAULT);
 
-   char subsc[32];
-   sprintf(subsc,"#%d ",mod->id());
-   CHK(Tcl_VarEval(interp, modulename, " config -text {Module ",
-                           subsc,mod->fullPath(),"}", NULL));
+   char id[32];
+   sprintf(id," (id=%d)",mod->id());
+   CHK(Tcl_VarEval(interp, modulename, " config -text {",mod->fullPath(),id,"}", NULL));
    if (mod->isSimple())
    {
        CHK(Tcl_VarEval(interp, phase, " config -text {Phase: ",
