@@ -30,7 +30,7 @@ proc create_messagewindow {name} {
     # creating widgets
     toplevel $w -class Toplevel
     wm focusmodel $w passive
-    wm maxsize $w 1009 738
+    #wm maxsize $w 1009 738
     wm minsize $w 1 1
     wm overrideredirect $w 0
     wm resizable $w 1 1
@@ -166,7 +166,7 @@ proc create_fileviewer {filename} {
     toplevel $w -class Toplevel
     wm focusmodel $w passive
     wm geometry $w 350x275
-    wm maxsize $w 1009 738
+    #wm maxsize $w 1009 738
     wm minsize $w 1 1
     wm overrideredirect $w 0
     wm resizable $w 1 1
